--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "name": "laravel/react-starter-kit",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.4",
@@ -20,6 +23,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "*",
         "laravel/tinker": "^2.10.1",
+        "laravolt/avatar": "^6.1",
         "livewire/livewire": "^3.5.18",
         "maatwebsite/excel": "^3.1.62",
         "nwidart/laravel-modules": "^12.0",
@@ -28,7 +32,6 @@
         "spatie/laravel-translatable": "^6.11",
         "tightenco/ziggy": "^2.4"
     },
-
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/dusk": "^8.3",
