--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
     app:
         build: .
@@ -7,6 +5,9 @@ services:
         working_dir: /var/www/html
         volumes:
             - .:/var/www/html
+            - ./database:/var/www/html/database
+            - app_data:/var/www/html/storage
+            - app_data:/var/www/html/bootstrap/cache
         depends_on:
             - node
         networks:
@@ -38,3 +39,7 @@ services:
 networks:
     marketoo_network:
         driver: bridge
+
+volumes:
+    app_data:
+        external: false  # Ensure it's created locally, not externally
