--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name localhost;
-    root /var/www/html/public;
+    server_name marketoo;
+    root /var/www/html/public;  # Use the correct path inside the container
 
     index index.php index.html index.htm;
 
