--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
         "ziggy-js": "^2.5.2"
     },
