--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "lucide-react": "^0.475.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "sonner": "^2.0.3",
         "swiper": "^11.2.6",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
