--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
